unit tests are more reliable now