@@ -256,9 +256,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-          <!--
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-          -->
+          <argLine>-Xmx512m</argLine>
         </configuration>
       </plugin>
     </plugins>
